# fasteda

./: .gitmodules  CMakeLists.txt  README.md  pyproject.toml
.github/workflows/: build_wheels.yml
include/fasteda/: column_accumulator.hpp  hyperloglog.hpp
include/zedda/: column_accumulator.hpp  hyperloglog.hpp  profile_builder.hpp  profile_result.hpp  stream_reader.hpp
python/zedda/: __init__.py
src/bindings/: bindings.cpp
src/core/: arrow_profiler.cpp  profile_builder.cpp  stream_reader.cpp
tests/: test_phase3.py
tests/cpp/: test_day1.cpp
tests/python/: test_fasteda.py
