[build-system]
requires = [
    "scikit-build-core>=0.9",
    "nanobind>=2.0",
]
build-backend = "scikit_build_core.build"

# ── Project metadata ─────────────────────────────────────────────
[project]
name = "zedda"
version = "0.2.1"
description = "Zero Effort Data Analysis — 1TB files in seconds, C++ parallel core"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
keywords = [
    "eda", "data-science", "profiling", "csv", "parquet",
    "pandas", "fast", "cli", "analysis", "sampling", "arrow"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: C++",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "rich>=13.0",
    "typer>=0.12",
    "pyarrow>=10.0.0",
]

[project.optional-dependencies]
ai  = ["openai>=1.0"]
dev = ["pytest>=8.0", "pandas>=2.0", "numpy>=1.24"]

[project.scripts]
zedda = "zedda.cli:app"

[project.urls]
Homepage   = "https://github.com/prince3235/Zedda"
Repository = "https://github.com/prince3235/Zedda"
Issues     = "https://github.com/prince3235/Zedda/issues"

# ── scikit-build-core ────────────────────────────────────────────
[tool.scikit-build]
cmake.build-type    = "Release"
cmake.source-dir    = "."
wheel.packages      = ["python/zedda"]
wheel.install-dir   = "zedda"
build-dir           = "build/{wheel_tag}"
sdist.exclude       = [
    "*.exe", "*.pyd", "*.dll",
    "build/", "wheelhouse/",
    "tests/cpp/", "benchmarks/",
    "*.csv", "*.txt",
    "debug_import.py", "test_import.py",
]

[tool.scikit-build.cmake.define]
FETCHCONTENT_UPDATES_DISCONNECTED = "ON"

# ── pytest ───────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]